<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 *  Copyright (C) 2013-2014 Cypress Semiconductor
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_item_padding_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_selectdevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_device"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorSecondary" >
            </TextView>

            <TextView
                android:id="@+id/deviceAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary" >
            </TextView>

            <TextView
                android:id="@+id/connectionState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/label_connect" >
            </Button>

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/label_disconnect" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_margin"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- BSG Service -->

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:singleLine="true"
                android:text="@string/label_bsg_service" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_padding_vertical"
                android:layout_marginRight="@dimen/list_item_padding_vertical"
                android:layout_marginTop="@dimen/activity_margin" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:orientation="horizontal" >

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/label_bsg_configuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_half"
                        android:text="@string/label_bsg_configuration" >
                    </TextView>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/value_bsg_configuration"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:enabled="false"
                            android:inputType="number" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:orientation="horizontal" >

                            <Button
                                android:id="@+id/btn_write_bsg_configuration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:text="@string/label_write" />

                            <Button
                                android:id="@+id/btn_bsg_start"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:text="@string/label_start"
                                android:layout_weight="1" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <!-- Device Information -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:text="@string/description_bsg_service"
                android:id="@+id/label_bsg_throughput" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_item_padding_vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical" >

                </LinearLayout>

            </RelativeLayout>

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:singleLine="true"
                android:text="@string/label_notifications" >
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/list_item_padding_vertical" >

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:text="@string/label_clear" />

                <TextView
                    android:id="@+id/value_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_toLeftOf="@id/btn_clear"
                    android:background="@color/ltgray"
                    android:maxLines="10"
                    android:minLines="10"
                    android:scrollbars="vertical" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>